compiler/typ/tests/fixtures/diagnostics/0045_core_if_branch_mismatch_04.ml.infer.expected
File "0045_core_if_branch_mismatch_04.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0045_core_if_branch_mismatch_04 is not a valid module name.

File "0045_core_if_branch_mismatch_04.ml", line 1, characters 29-34:
1 | let _ = if false then 3 else false
                                 ^^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
