compiler/typ/tests/fixtures/diagnostics/0045_core_if_branch_mismatch_04.ml
let _ = if false then 3 else false
